Commit after api key change

--- a/tabpfn/RunFullDatasetAnalyses.ipynb
+++ b/tabpfn/RunFullDatasetAnalyses.ipynb
@@ -305,8 +305,7 @@
     "                                metric_used=metric_used, \n",
     "                                split_number=split_number\n",
     "                                )\n",
-    "            \n",
-    "print(f\"These are the global results: {global_results}\")"
+    "            "
    ]
   },
   {
@@ -900,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
